--- a/style.css
+++ b/style.css
@@ -88,9 +88,97 @@ body {
 /* !!! utilities */
 /* --------------------------------- */
 
-.flex-wrap {
+.flex-group {
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
   gap: 1rem;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.visually-hidden:not(:focus):not(:active) {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+}
+
+/* --------------------------------- */
+/* !!! product */
+/* --------------------------------- */
+
+.product {
+  --content-padding: 1.5rem;
+  --content-spacing: 1rem;
+
+  display: grid;
+  background-color: var(--clr-neutral-100);
+  border-radius: 0.5rem;
+  overflow: hidden;
+  max-width: 37.5rem;
+}
+
+@media (min-width: 37.5em) {
+  .product {
+    --content-padding: 2rem;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+.product__content {
+  display: grid;
+  gap: var(--content-spacing);
+  padding: var(--content-padding);
+}
+
+.product__category {
+  font-size: 0.8125rem;
+  letter-spacing: 5px;
+  text-transform: uppercase;
+}
+
+.product__title {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  color: var(--clr-neutral-900);
+}
+
+.product__price {
+  font-size: 2rem;
+  font-family: var(--ff-accent);
+  color: var(--clr-primary-400);
+}
+
+/* --------------------------------- */
+/* !!! button */
+/* --------------------------------- */
+
+.button {
+  cursor: pointer;
+  display: inline-flex;
+  gap: 0.75rem;
+  justify-content: center;
+  align-items: center;
+
+  border: 0;
+  border-radius: 0.5rem;
+  padding: 0.75em 1.5em;
+  font-size: 0.925rem;
+  font-weight: var(--fw-bold);
+  background-color: var(--clr-primary-400);
+  color: var(--clr-neutral-100);
+  transition: all 300ms ease-in-out;
+}
+
+.button[data-icon="shopping-cart"]::before {
+  content: "";
+  background-image: url("./images/icon-cart.svg");
+  width: 0.935rem;
+  height: 1rem;
+}
+
+.button:is(:hover, :focus) {
+  background-color: var(--clr-primary-500);
 }
